--- a/app/assets/storymap2/untitled folder/tainan.html
+++ b/app/assets/storymap2/untitled folder/tainan.html
@@ -27,8 +27,7 @@
     <!-- JavaScript-->
     <script src="../js/storymap.js"></script>
     <script>
-      // var storymap = new VCO.StoryMap('storymap', 'tainan.json', {map_type: "osm:standard", use_custom_markers:true});
-      var storymap = new VCO.StoryMap('storymap', 'tainan.json', {map_type: "osm:standard", use_custom_markers:true});
+      var storymap = new VCO.StoryMap('storymap', 'tainan.json');
       window.onresize = function(event) {
        storymap.updateDisplay();
       }
